Fix whitespace on resize at head of section content

--- a/source/assets/stylesheets/_grid-settings.sass
+++ b/source/assets/stylesheets/_grid-settings.sass
@@ -8,3 +8,4 @@ $max-width: 1200px
 
 $compact: new-breakpoint(max-width 700px 1)
 $small: new-breakpoint(max-width 1024px 1)
+$intermediate: new-breakpoint(max-width 1300px 1)
