--- a/source/assets/stylesheets/_section.sass
+++ b/source/assets/stylesheets/_section.sass
@@ -34,6 +34,9 @@ section.brief
   background-color: transparent
   margin-top: 140px
   margin-bottom: 200px
+  @include media($intermediate)
+    margin-top: 140px
+    margin-bottom: 30px
   @include media($small)
     margin-top: 40px
     margin-bottom: 50px
